--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
   <h1 class="display-4">Hello, nama saya Pandu!</h1>
   <p class="lead">Saya adalah robot pencinta lingkungan, disini untuk membentuk Smart Environment.</p>
   <hr class="my-4">
-  <p>Penasaran sama Pandu? Yuk Kenalan sama Pandu lewat LINE</p>
+  <p>Penasaran sama Pandu? Yuk kenalan sama Pandu lewat LINE</p>
   <p class="lead">
     <a class="btn btn-succes btn-lg text-light bg-success" href="#" role="button">Kenalan Yuk</a>
   </p>
@@ -20,7 +20,6 @@
     <div class="card-body">
     <h5 class="card-title">Kenapa?</h5>
     <p class="card-text">Pandu ingin membuat penggunanya untuk memajukan aksi peduli lingkungan. Maka dari itu fitur yang di implementasikan semua bertujuan untuk itu.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
 </div>
 
@@ -28,7 +27,6 @@
   <div class="card-body">
     <h5 class="card-title">Bagaimana?</h5>
     <p class="card-text">Dengan mengetahui sekitar lingkungan kita lebih baik, kita bisa mulai untuk hidup lebih baik juga. Memajukan mobilitas serta pengetahuan terhadap lingkungan seputar kita.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
 </div>
 
@@ -36,11 +34,36 @@
   <div class="card-body">
     <h5 class="card-title">Apa?</h5>
     <p class="card-text">Pandu tidak hanya sebagai pemandu jalanan untuk memajukan hidup dengan mobilitas yang mudah, tetapi juga memberi peluang pengguna untuk ikut peduli dengan linkungan.</p>
-    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
   </div>
 </div>
-
-
 </div>
+
+<div class="custom-divider container-fluid bg-success">
+  <h4 class="custom-divider-title">Fitur Pandu</h4>
+</div>
+
+<div class="card-deck container-fluid" style="margin : 0">
+
+  <div class="card mb-3">
+  <div class="card-body custom-feature-list">
+    <h5 class="card-title">Location Finder</h5>
+    <p class="card-text">Pandu bisa mencari restoran, bioskop, minimarket dan lain lain dengan cepat dan akurat. Pandu menggunakan API Google Maps dan Zomato untuk mengolah data.</p>
+    <br>
+    <h5 class="card-title">Weather Man</h5>
+    <p class="card-text">Sebelum Anda beraktivatas keluar, Pandu akan mengingatkan cuaca hari ini supaya Anda pergi dengan aman dan nyaman. Pandu menggunakan API OpenWeatherMap untuk mengolah data.</p>
+    <br>
+    <h5 class="card-title">Waste Market</h5>
+    <p class="card-text">Tahukah kalian bahwa Botol Plastik yang suka kalian buang bisa dijual kembali? Pandu membuat suatu Pasar Online dimana penggunanya bisa menjual beli limbah. Membuat peluang bisnis yang baik untuk penggunanya juga membersihkan keliling kita.</p>
+    <br>
+    <h5 class="card-title">Travel Token</h5>
+    <p class="card-text">Buat kalian yang suka diskon-an nih, Pandu punya sistem token dimana jika kalian menemukan token dengan logo Pandu di restoran ataupun tempat yang kalian kunjungi, bisa loh dapat travel point yang nanti dituker untuk diskon di beberapa restoran tertentu.</p>
+    <br>
+    <h5 class="card-title">Environment Tips and Tricks</h5>
+    <p class="card-text">Pandu suka sharing nih tentang cara menjaga lingkungan kita. Menurut Pandu, mejaga kebersihan lingkungan itu adalah hak dan kewajiban semua warga. Makanya jangan mau kalah sama Pandu, kita harus peduli sama lingkungan kita.</p>
+  </div>
+</div>
+</div>
+</div>
+
 
 {% endblock %}
