--- a/app/templates/include/nav.html
+++ b/app/templates/include/nav.html
@@ -5,17 +5,17 @@
   </button>
   <div class="collapse navbar-collapse justify-content-right" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Kenalan Yuk <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('index') }}">Kenalan Yuk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pasar Terbuka</a>
+        <a class="nav-link" href="{{ url_for('store') }}">Pasar Terbuka</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Lampu Hijau</a>
+        <a class="nav-link" href="">Lampu Hijau</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Tentang Kami</a>
+        <a class="nav-link" href="">Tentang Kami</a>
       </li>
     </ul>
   </div>
