--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,13 +55,45 @@
     <h5 class="card-title">Waste Market</h5>
     <p class="card-text">Tahukah kalian bahwa Botol Plastik yang suka kalian buang bisa dijual kembali? Pandu membuat suatu Pasar Online dimana penggunanya bisa menjual beli limbah. Membuat peluang bisnis yang baik untuk penggunanya juga membersihkan keliling kita.</p>
     <br>
-    <h5 class="card-title">Travel Token</h5>
+    <h5 class="card-title">Travel Point and Tokens</h5>
     <p class="card-text">Buat kalian yang suka diskon-an nih, Pandu punya sistem token dimana jika kalian menemukan token dengan logo Pandu di restoran ataupun tempat yang kalian kunjungi, bisa loh dapat travel point yang nanti dituker untuk diskon di beberapa restoran tertentu.</p>
     <br>
     <h5 class="card-title">Environment Tips and Tricks</h5>
     <p class="card-text">Pandu suka sharing nih tentang cara menjaga lingkungan kita. Menurut Pandu, mejaga kebersihan lingkungan itu adalah hak dan kewajiban semua warga. Makanya jangan mau kalah sama Pandu, kita harus peduli sama lingkungan kita.</p>
   </div>
 </div>
+</div>
+
+<div class="custom-divider container-fluid bg-success">
+  <h4 class="custom-divider-title">Digibot's Team</h4>
+</div>
+
+<div class="card-deck container-fluid" style="margin : 0">
+  <div class="card bg-dark text-white">
+  <img class="card-img" src="{{ url_for('static', filename='img/placeholder_150.jpeg') }}" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Abhishta Gatya</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Full Stack Developer</h6>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+  </div>
+</div>
+
+<div class="card bg-dark text-white">
+  <img class="card-img" src="{{ url_for('static', filename='img/placeholder_150.jpeg') }}" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Fadhi Rakhman</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Marketing & Presentation Designer</h6>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+  </div>
+</div>
+
+<div class="card bg-dark text-white">
+  <img class="card-img" src="{{ url_for('static', filename='img/placeholder_150.jpeg') }}" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Kevin Govinda</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Bussiness Development</h6>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+  </div>
 </div>
 </div>
 
