Point Exchange Carousel

--- a/app/templates/include/nav.html
+++ b/app/templates/include/nav.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="{{ url_for('index') }}">Kenalan Yuk</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('store') }}">Pasar Terbuka</a>
+        <a class="nav-link" href="{{ url_for('store') }}">Pasar Limbah</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="">Lampu Hijau</a>
