Refactoring Code : Addition to Speech and Greenlight

--- a/app/templates/include/nav.html
+++ b/app/templates/include/nav.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="{{ url_for('store') }}">Pasar Limbah</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Lampu Hijau</a>
+        <a class="nav-link" href="{{ url_for('green_light') }}">Lampu Hijau</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="">Tentang Kami</a>
