Refactoring Code : Addition to Some Minor Arts and Designs

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -70,28 +70,28 @@
 
 <div class="card-deck container-fluid" style="margin : 0">
   <div class="card bg-dark text-white">
-  <img class="card-img" src="{{ url_for('static', filename='img/placeholder_150.jpeg') }}" alt="Card image">
+  <img class="card-img" src="{{ url_for('static', filename='img/web_img/aga.png') }}" alt="Card image">
   <div class="card-img-overlay">
     <h5 class="card-title">Abhishta Gatya</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Full Stack Developer</h6>
+    <h6 class="card-subtitle mb-2 text-success">Full Stack Developer</h6>
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
   </div>
 </div>
 
 <div class="card bg-dark text-white">
-  <img class="card-img" src="{{ url_for('static', filename='img/placeholder_150.jpeg') }}" alt="Card image">
+  <img class="card-img" src="{{ url_for('static', filename='img/web_img/fadhi.png') }}" alt="Card image">
   <div class="card-img-overlay">
     <h5 class="card-title">Fadhi Rakhman</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Marketing & Presentation Designer</h6>
+    <h6 class="card-subtitle mb-2 text-success">Marketing & Presentation Designer</h6>
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
   </div>
 </div>
 
 <div class="card bg-dark text-white">
-  <img class="card-img" src="{{ url_for('static', filename='img/placeholder_150.jpeg') }}" alt="Card image">
+  <img class="card-img" src="{{ url_for('static', filename='img/web_img/kevin.png') }}" alt="Card image">
   <div class="card-img-overlay">
     <h5 class="card-title">Kevin Govinda</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Bussiness Development</h6>
+    <h6 class="card-subtitle mb-2 text-success">Bussiness Development</h6>
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
   </div>
 </div>
