Final Refactor : Bug #1 unbound conditional

--- a/app/templates/greenlight.html
+++ b/app/templates/greenlight.html
@@ -7,7 +7,7 @@
   <hr class="my-4">
   <p>Penasaran sama Pandu? Yuk kenalan sama Pandu lewat LINE</p>
   <p class="lead">
-    <a class="btn btn-succes btn-lg text-light bg-success" href="#" role="button">Kenalan Yuk</a>
+    <a class="btn btn-succes btn-lg text-light bg-success" href="https://line.me/R/ti/p/%40wxx2288i" role="button">Kenalan Yuk</a>
   </p>
 </div>
 
