Final Refactor : Refactor Travel Options mode

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pandu, si pemandu di Smart Environment">
-    <link rel="icon" href="{{ url_for('static', filename='img/web_img/ava.png') }}" type="image/gif" sizes="16x16">
+    <link rel="icon" href="{{ url_for('static', filename='img/web_img/ava.png') }}" type="image/x-icon" sizes="16x16">
 
     <!--Import Google Icon & Font-->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700" rel="stylesheet">
