--- a/app/templates/include/nav.html
+++ b/app/templates/include/nav.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="{{ url_for('green_light') }}">Lampu Hijau</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Tentang Kami</a>
+        <a class="nav-link" href="{{ url_for('about') }}">Tentang Kami</a>
       </li>
     </ul>
   </div>
