Final Refactor : Compression #2

--- a/app/templates/store.html
+++ b/app/templates/store.html
@@ -25,7 +25,7 @@
     {% for store_information in store %}
            <div class="col-sm-3" style="margin-top: 10px; margin-bottom: 10px">
              <div class="card" style="max-width: 18rem;">
-                <img class="card-img-top" src="{{ url_for('static', filename='img/placeholder_100.jpeg') }}" alt="Card image cap">
+                <img class="card-img-top" src="{{ url_for('static', filename='img/feature_thumbnail/3R.png') }}" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">{{ store_information['market_name'] }}</h5>
                   <h6 class="card-subtitle mb-2 text-muted">{{ store_information['market_demand'] }}</h6>
